--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+/* Font */
+/* Color */
 * {
   padding: 0;
   margin: 0;
@@ -6,11 +9,12 @@
 
 body {
   background-color: lightgray;
+  font-family: -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
 }
 
 .container {
-  height: 100px;
-  background-color: cyan;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
