--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,247 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 /* Font */
 /* Color */
+/* Bootstrap-like spacing */
+.mt-0 {
+  margin-top: 0rem !important;
+}
+
+.pt-0 {
+  padding-top: 0rem !important;
+}
+
+.mt-1 {
+  margin-top: 0.25rem !important;
+}
+
+.pt-1 {
+  padding-top: 0.25rem !important;
+}
+
+.mt-2 {
+  margin-top: 0.5rem !important;
+}
+
+.pt-2 {
+  padding-top: 0.5rem !important;
+}
+
+.mt-3 {
+  margin-top: 1rem !important;
+}
+
+.pt-3 {
+  padding-top: 1rem !important;
+}
+
+.mt-4 {
+  margin-top: 1.5rem !important;
+}
+
+.pt-4 {
+  padding-top: 1.5rem !important;
+}
+
+.mt-5 {
+  margin-top: 3rem !important;
+}
+
+.pt-5 {
+  padding-top: 3rem !important;
+}
+
+.mb-0 {
+  margin-bottom: 0rem !important;
+}
+
+.pb-0 {
+  padding-bottom: 0rem !important;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem !important;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem !important;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem !important;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem !important;
+}
+
+.mb-3 {
+  margin-bottom: 1rem !important;
+}
+
+.pb-3 {
+  padding-bottom: 1rem !important;
+}
+
+.mb-4 {
+  margin-bottom: 1.5rem !important;
+}
+
+.pb-4 {
+  padding-bottom: 1.5rem !important;
+}
+
+.mb-5 {
+  margin-bottom: 3rem !important;
+}
+
+.pb-5 {
+  padding-bottom: 3rem !important;
+}
+
+.ms-0 {
+  margin-left: 0rem !important;
+}
+
+.ps-0 {
+  padding-left: 0rem !important;
+}
+
+.ms-1 {
+  margin-left: 0.25rem !important;
+}
+
+.ps-1 {
+  padding-left: 0.25rem !important;
+}
+
+.ms-2 {
+  margin-left: 0.5rem !important;
+}
+
+.ps-2 {
+  padding-left: 0.5rem !important;
+}
+
+.ms-3 {
+  margin-left: 1rem !important;
+}
+
+.ps-3 {
+  padding-left: 1rem !important;
+}
+
+.ms-4 {
+  margin-left: 1.5rem !important;
+}
+
+.ps-4 {
+  padding-left: 1.5rem !important;
+}
+
+.ms-5 {
+  margin-left: 3rem !important;
+}
+
+.ps-5 {
+  padding-left: 3rem !important;
+}
+
+.me-0 {
+  margin-right: 0rem !important;
+}
+
+.pe-0 {
+  padding-right: 0rem !important;
+}
+
+.me-1 {
+  margin-right: 0.25rem !important;
+}
+
+.pe-1 {
+  padding-right: 0.25rem !important;
+}
+
+.me-2 {
+  margin-right: 0.5rem !important;
+}
+
+.pe-2 {
+  padding-right: 0.5rem !important;
+}
+
+.me-3 {
+  margin-right: 1rem !important;
+}
+
+.pe-3 {
+  padding-right: 1rem !important;
+}
+
+.me-4 {
+  margin-right: 1.5rem !important;
+}
+
+.pe-4 {
+  padding-right: 1.5rem !important;
+}
+
+.me-5 {
+  margin-right: 3rem !important;
+}
+
+.pe-5 {
+  padding-right: 3rem !important;
+}
+
+.m-0 {
+  margin: 0rem !important;
+}
+
+.p-0 {
+  padding: 0rem !important;
+}
+
+.m-1 {
+  margin: 0.25rem !important;
+}
+
+.p-1 {
+  padding: 0.25rem !important;
+}
+
+.m-2 {
+  margin: 0.5rem !important;
+}
+
+.p-2 {
+  padding: 0.5rem !important;
+}
+
+.m-3 {
+  margin: 1rem !important;
+}
+
+.p-3 {
+  padding: 1rem !important;
+}
+
+.m-4 {
+  margin: 1.5rem !important;
+}
+
+.p-4 {
+  padding: 1.5rem !important;
+}
+
+.m-5 {
+  margin: 3rem !important;
+}
+
+.p-5 {
+  padding: 3rem !important;
+}
+
 /* footnote endnote caption body-text blockquote h6 h5 h4 h3 h2 h1 */
 /*
 Formula: Fi = F0 * r^(i/n)
@@ -17,6 +258,22 @@ Formula: Fi = F0 * r^(i/n)
 @param steps - n
 @param composition - Type of the composition series
 */
+.sl-c-navbar {
+  background-color: #F2F2F2;
+  border-bottom: 1px solid #C0C0C0;
+}
+.sl-c-navbar ul {
+  list-style: none;
+}
+.sl-c-navbar li {
+  display: inline-block;
+  text-decoration: none;
+}
+.sl-c-navbar a {
+  text-decoration: none;
+  color: black;
+}
+
 .footnote {
   font-size: 0.749rem;
 }
@@ -68,7 +325,6 @@ h1 {
 }
 
 body {
-  background-color: lightgray;
   font-family: -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
 }
 
