--- a/public/style.css
+++ b/public/style.css
@@ -264,6 +264,52 @@ Formula: Fi = F0 * r^(i/n)
 @param steps - n
 @param composition - Type of the composition series
 */
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.row > * {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+}
 .sl-c-navbar {
   background-color: #F2F2F2;
   border-bottom: 1px solid #C0C0C0;
@@ -305,6 +351,47 @@ Formula: Fi = F0 * r^(i/n)
   }
   .sl-c-navbar__expand-btn::after {
     display: none;
+  }
+}
+.sl-l-container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-l-container {
+  text-align: center;
+}
+.main-l-container__body {
+  justify-content: space-between;
+}
+.main-c-blockquote {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.main-c-button {
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #AFE1AF;
+  cursor: pointer;
+}
+.main-c-image__box {
+  margin-top: auto;
+  margin-bottom: auto;
+  max-width: 720px;
+}
+.main-c-image__box img {
+  border-radius: 10px;
+  transition: all 1s;
+}
+
+@media (min-width: 768px) {
+  .main-l-container {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+  .main-c-button {
+    padding: 2rem 4rem;
   }
 }
 .footnote {
@@ -355,9 +442,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
+img {
+  width: 100%;
+  height: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
