--- a/scss/common/_var.scss
+++ b/scss/common/_var.scss
@@ -7,3 +7,6 @@ $default-font: -apple-system,BlinkMacSystemFont,"Inter",sans-serif;
 $primary-color: #d3d3d3;
 $gray-1: #F2F2F2;
 $gray-2: #C0C0C0;
+$green-1: #AFE1AF;
+$green-2: #DFFF00;
+$green-3: #AAFF00;
