--- a/public/style.css
+++ b/public/style.css
@@ -365,11 +365,11 @@ Formula: Fi = F0 * r^(i/n)
   justify-content: space-between;
 }
 .main-c-blockquote {
-  margin-top: auto;
-  margin-bottom: auto;
+  padding-right: 0;
 }
 .main-c-button {
-  padding: 1rem 2rem;
+  width: 40%;
+  aspect-ratio: 3/1;
   border: none;
   border-radius: 5px;
   background-color: #AFE1AF;
@@ -389,9 +389,13 @@ Formula: Fi = F0 * r^(i/n)
   .main-l-container {
     padding-left: 10%;
     padding-right: 10%;
+    text-align: start;
+  }
+  .main-c-blockquote {
+    padding-right: 1.5rem;
   }
   .main-c-button {
-    padding: 2rem 4rem;
+    width: 60%;
   }
 }
 .footnote {
