--- a/scss/pages/_main.scss
+++ b/scss/pages/_main.scss
@@ -29,6 +29,7 @@
     &-image__box {
       @include center-block-vertical;
       max-width: 720px;
+      max-height: 900px;
 
       img {
         border-radius: 10px;
