--- a/scss/common/_utils.scss
+++ b/scss/common/_utils.scss
@@ -1,4 +1,5 @@
 @use 'sass:math';
+@use 'var';
 
 @mixin center-block($m: auto, $mode: "margin") {
   #{$mode}-left: $m;
@@ -13,4 +14,21 @@
 @function decimalRound($n, $fractionDigits: 0) {
   $power: math.pow(10, $fractionDigits);
   @return math.div(math.round($n * $power), $power);
+}
+
+.fade-out {
+  opacity: .1;
+}
+
+.background-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100dvw;
+  height: 100dvh;
+  opacity: .8;
+  background-color: var.$gray-2;
+  z-index: 2;
 }
