--- a/public/style.css
+++ b/public/style.css
@@ -428,6 +428,13 @@ Formula: Fi = F0 * r^(i/n)
   display: flex;
   flex-wrap: wrap;
 }
+.gallery-l-button {
+  position: fixed;
+  right: 2rem;
+  bottom: 2rem;
+  z-index: 2;
+  width: 4rem;
+}
 .gallery-c-cell {
   flex: 1 1 auto;
   height: 260px;
@@ -458,6 +465,17 @@ Formula: Fi = F0 * r^(i/n)
 .gallery-c-cell:hover {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
+}
+.gallery-c-button {
+  border-radius: 50%;
+  aspect-ratio: 1;
+  padding: 0.5rem;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  width: 100%;
+}
+.gallery-c-button:hover {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .footnote {
@@ -511,6 +529,10 @@ body {
 img {
   width: 100%;
   height: auto;
+}
+
+button {
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
